Added sub titles to main images

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -118,7 +118,7 @@
                   <div class="carousel-caption">
                   	<div class="splashText">
                     <h2>Inflo</h2>
-                    <h4>Sub Heading Text Place Holder</h4>
+                    <h4>Get to Know your County</h4>
                     </div>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalDetailsInflo">READ MORE</button>
                   </div>
@@ -128,7 +128,7 @@
                   <div class="carousel-caption captionRight">
                   	<div class="splashText">
                     <h2>MEDCHECK</h2>
-                    <h4>Sub Heading Text Place Holder</h4>
+                    <h4>Know the Side Effects of Medications</h4>
                     </div>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalDetailsMEDCheck">READ MORE</button>
                   </div>
