Added content on cards

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -107,8 +107,8 @@
                   <img src="images/splash-img.png" alt="...">
                   <div class="carousel-caption">
                   	<div class="splashText">
-                    <h2>OLABS DIGITAL SHOWCASE</h2>
-                    <h4>Sub Heading Text Place Holder</h4>
+                    <h2>DIGITAL SHOWCASE</h2>
+                    <h4>Demonstrating Octo's Digital Capabilities</h4>
                     </div>
                     <button type="button" class="btn btn-primary actionBtn" >VIEW APPLICATIONS</button>
                   </div>
@@ -226,11 +226,11 @@
           <div class="card">
             <div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsRefusalCheck">RefusalCheck</a></div>
-              <div class="cardSubTitle">FDA Drug and Product Refusals</div>
+              <div class="cardSubTitle">Rapidly check for food and drug refusals</div>
             </div>
             <div><img class="cardImage" src="images/refusalCheck-thumb.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsRefusalCheck"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
+              <div class="cardCatagory">Providing consumers with quick access to global food and drug refusals.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
@@ -366,11 +366,11 @@
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">RefusalCheck</div>
               <div class="modalHeading">The Problem:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Consumers need a centralized mechanism to view statistical information on food and drug refusals.</div>
               <div class="modalHeading">The Solution:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Consumers should have a centralized dashboard to be able to view statistical information on food and drug refusals in order to identify food and drug related implications prior to consumption.</div>
               <div class="modalHeading">The Benefits:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Consumers will be able to search on manufacturer(s) or product(s) and obtain useful data including number of refusals, percentage of FDA sample analysis, country of origin and refusal date.</div>
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/RefusalCheckDetails.png" alt="Screenshots of Inflo Application"/></div>
