Updated icons in the information card

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -347,9 +347,10 @@
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/MEDCheckDetails.png" alt="Screenshots of Inflo Application"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="HTML5"><img src="images/HTML5_Badge.png" alt="HTML5 Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="CSS3"><img src="images/css3-Badge.png" alt="CSS3 Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Angular"><img src="images/angularjs-logo.png" alt="Angular Logo"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
+			  <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png"  alt="Amazon Web Services"/></div>
             </div>
             <a href="http://ec2-52-0-126-175.compute-1.amazonaws.com/index.html#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>
   	      </div>
@@ -374,9 +375,10 @@
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/RefusalCheckDetails.png" alt="Screenshots of Inflo Application"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="HTML5"><img src="images/HTML5_Badge.png" alt="HTML5 Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="CSS3"><img src="images/css3-Badge.png" alt="CSS3 Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Angular"><img src="images/angularjs-logo.png" alt="Angular Logo"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
+			  <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png"  alt="Amazon Web Services"/></div>
             </div>
             <!--<a href="http://apps.octoconsulting.com/inflo/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>-->
   	      </div>
@@ -401,9 +403,10 @@
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Inflo Application"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="HTML5"><img src="images/HTML5_Badge.png" alt="HTML5 Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="CSS3"><img src="images/css3-Badge.png" alt="CSS3 Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Angular"><img src="images/angularjs-logo.png" alt="Angular Logo"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
+			  <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png"  alt="Amazon Web Services"/></div>
             </div>
             <!--<a href="http://apps.octoconsulting.com/inflo/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>-->
   	      </div>
