Test Git Connection
Made small change to confirm correct git page connection.

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -261,7 +261,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsNewApp">App Name</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsNewApp">App Test</a></div>
               <div class="cardSubTitle">Sub Title</div>
             </div>
             <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsNewApp"/></div>
