--- a/fullscreen.html
+++ b/fullscreen.html
@@ -261,16 +261,16 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsNewApp">Mashup App</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsMashup">Mashup App</a></div>
               <div class="cardSubTitle">Sub Title</div>
             </div>
-            <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsNewApp"/></div>
+            <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsMashup"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
-              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsNewApp">READ MORE</button>
+              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsMashup">READ MORE</button>
             </div>
           </div>
           <!--Card End-->
@@ -279,16 +279,16 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsNewApp">EPA App</a></div>
-              <div class="cardSubTitle">Sub Title</div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsLiveSafe">LiveSafe</a></div>
+              <div class="cardSubTitle">Move Smarter.</div>
             </div>
-            <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsNewApp"/></div>
+            <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLiveSafe"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
-              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsNewApp">READ MORE</button>
+              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsLiveSafe">READ MORE</button>
             </div>
           </div>
           <!--Card End-->
@@ -407,6 +407,62 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">Lumify</div>
+              <div class="modalHeading">The Problem:</div>
+              <div class="modalText">Volumes of structured, unstructured, and semi-structured data at scale and at velocity, provide ingestion and dissemination challenges. This complicates efforts to analyze and graph relationships to analyze links.</div>
+              <div class="modalHeading">The Solution:</div>
+              <div class="modalText">Users can analyze relationships and automatically discovers paths between entities, and establishes new links.</div>
+              <div class="modalHeading">The Benefits:</div>
+              <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
+            </div>
+            <div class="col-md-6 modalRight">
+              <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Inflo Application"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
+			  <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png"  alt="Amazon Web Services"/></div>
+            </div>
+            <!--<a href="http://apps.octoconsulting.com/inflo/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>-->
+  	      </div>
+        </div>
+ 	  </div>
+	</div>
+    
+    <!--Modal Mashup Application Details-->
+    <div id="modalDetailsMashup" class="modal fade" tabindex="-1" role="dialog">
+	  <div class="modal-dialog modal-lg">
+ 	    <div class="modal-content">
+          <div class="row modalRow">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <div class="col-md-6 modalLeft">
+              <div class="modalTitle">Mashup</div>
+              <div class="modalHeading">The Problem:</div>
+              <div class="modalText">Volumes of structured, unstructured, and semi-structured data at scale and at velocity, provide ingestion and dissemination challenges. This complicates efforts to analyze and graph relationships to analyze links.</div>
+              <div class="modalHeading">The Solution:</div>
+              <div class="modalText">Users can analyze relationships and automatically discovers paths between entities, and establishes new links.</div>
+              <div class="modalHeading">The Benefits:</div>
+              <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
+            </div>
+            <div class="col-md-6 modalRight">
+              <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Inflo Application"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
+			  <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png"  alt="Amazon Web Services"/></div>
+            </div>
+            <!--<a href="http://apps.octoconsulting.com/inflo/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>-->
+  	      </div>
+        </div>
+ 	  </div>
+	</div>
+    
+    <!--Modal LiveSafe Application Details-->
+    <div id="modalDetailsLiveSafe" class="modal fade" tabindex="-1" role="dialog">
+	  <div class="modal-dialog modal-lg">
+ 	    <div class="modal-content">
+          <div class="row modalRow">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <div class="col-md-6 modalLeft">
+              <div class="modalTitle">LiveSafe</div>
               <div class="modalHeading">The Problem:</div>
               <div class="modalText">Volumes of structured, unstructured, and semi-structured data at scale and at velocity, provide ingestion and dissemination challenges. This complicates efforts to analyze and graph relationships to analyze links.</div>
               <div class="modalHeading">The Solution:</div>
