Added LiveSafe Screenshots
Screenshots and thumbnails added for LiveSafe App

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -282,7 +282,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsLiveSafe">LiveSafe</a></div>
               <div class="cardSubTitle">Move Smarter.</div>
             </div>
-            <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLiveSafe"/></div>
+            <div><img class="cardImage" src="images/LiveSafe-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLiveSafe"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
@@ -359,7 +359,7 @@
               <div class="modalText">Consumer should be able to go to a single web site to research safety information of prescription medications and make informed choices on which prescription medication to choose based on history of adverse effects, label warnings, and recalls.</div>
             </div>
             <div class="col-md-6 modalRight">
-              <div class="appShowcaseImg"><img src="images/MEDCheckDetails.png" alt="Screenshots of Inflo Application"/></div>
+              <div class="appShowcaseImg"><img src="images/MEDCheckDetails.png" alt="Screenshots of MEDCheck Application"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
@@ -387,7 +387,7 @@
               <div class="modalText">Consumers will be able to search on manufacturer(s) or product(s) and obtain useful data including number of refusals, percentage of FDA sample analysis, country of origin and refusal date.</div>
             </div>
             <div class="col-md-6 modalRight">
-              <div class="appShowcaseImg"><img src="images/RefusalCheckDetails.png" alt="Screenshots of Inflo Application"/></div>
+              <div class="appShowcaseImg"><img src="images/RefusalCheckDetails.png" alt="Screenshots of RefusalCheck Application"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
@@ -415,7 +415,7 @@
               <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
             </div>
             <div class="col-md-6 modalRight">
-              <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Inflo Application"/></div>
+              <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Lumify Application"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
@@ -443,7 +443,7 @@
               <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
             </div>
             <div class="col-md-6 modalRight">
-              <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Inflo Application"/></div>
+              <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Mashup Application"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
@@ -471,7 +471,7 @@
               <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
             </div>
             <div class="col-md-6 modalRight">
-              <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Inflo Application"/></div>
+              <div class="appShowcaseImg"><img src="images/LiveSafeDetails.png" alt="Screenshots of LifeSafe Application"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
