About and Contact Updates
Added place holder text for about.
Added contact info.

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -492,7 +492,8 @@
           <div class="row modalRow" style="padding:20px">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div id="modalLeft" class="col-md-12">
-              About Content.
+              <div class="modalTitle">About</div>
+              <div class="modalText">Technology is changing at an unprecedented rate around us, and this shift is leading to the creation of new challenges and innovations in the public sector. OLabs was born from the idea that efficiency is the new innovation and that technology can be used to challenge the status quo, creating new ways of solving business problems.</br></br>We combine the principles of design thinking with lean startup methodology to ensure the solutions we create are user focused and aligned with solving business problems. This user-centric obsession, combined with our fail fast/fail forward Agile approach, enables us to ideate, prototype, and create solutions rapidly. Meanwhile, we validate our solutions with customer feedback. The days of “blank checks” in government IT are over, and we are delivering solutions that help the government be more Agile and efficient in this new normal of budget uncertainty.</div>
             </div>
   	      </div>
         </div>
@@ -506,7 +507,16 @@
           <div class="row modalRow" style="padding:20px">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div id="modalLeft" class="col-md-12">
-              Contact Content.
+              <div class="modalTitle">About</div>
+              <div class="modalHeading">Email:</div>
+              <div class="modalText"><a href="mailto:Info@octoconsulting.com">info@octoconsulting.com</a></div>
+              <div class="modalHeading">Phone:</div>
+              <div class="modalText">(571)423-0200</div>
+              <div class="modalHeading">Office Address:</div>
+              <div class="modalText">1600 International Drive</div>
+              <div class="modalText">5th Floor</div>
+              <div class="modalText">McLean, VA 22102</div>
+            </div>
             </div>
   	      </div>
         </div>
